--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 reqwest = { version = "0.11.25", features = ["json"]}
 serde ={ version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.12.0", features = ["full"] }
+futures = { version = "0.3"}
