--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ reqwest = { version = "0.11.25", features = ["json"]}
 serde ={ version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.12.0", features = ["full"] }
 futures = { version = "0.3"}
+
+[dev-dependencies]
+tempfile = "3.2.0"
